[package]
name = "gba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
log = "0.4.17"
ratatui = "0.20"
sdl2 = "0.35.2"
tui-logger = { version = "0.9.1", features = ["ratatui-support"], default-features = false }

[profile.release]
debug = 1
